deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demos
  labels:
    apps: web-based
  annotations:
    type: demo
