deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-server-1
  name: auth-server-ingress
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: auth-server-1
  type: LoadBalancer
