deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-server-dep
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /test/*
        backend:
          serviceName: auth-server-ingress
          servicePort: 8088
